# color-rules-cellular-automata

./: Cargo.toml  README.md
src/: main.rs
