[package]
name = "color-rules-cellular-automata"
version = "0.1.0"
authors = ["joe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
minifb = "0.12"
rayon = "1.1"
ansi_term = "0.12.0"
gif = "0.10.2"

[profile.release]
debug = true

[features]
interactive = []